[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/TROTTENET - SelectionMenu.png" type="Texture" id=1]
[ext_resource path="res://Assets/TROTTENET - SelectionMenu_Level.png" type="Texture" id=2]
[ext_resource path="res://Assets/TROTTENET - SelectionMenu_Character.png" type="Texture" id=3]
[ext_resource path="res://Assets/Buttons/TROTTENET - Startbutton Pr.png" type="Texture" id=4]
[ext_resource path="res://Assets/Buttons/TROTTENET - Arrowbutton RPr.png" type="Texture" id=5]
[ext_resource path="res://Assets/Buttons/TROTTENET - Startbutton.png" type="Texture" id=6]
[ext_resource path="res://Assets/Buttons/TROTTENET - Highscoresbutton.png" type="Texture" id=7]
[ext_resource path="res://Assets/Buttons/TROTTENET - Highscoresbutton Pr.png" type="Texture" id=8]
[ext_resource path="res://Assets/Buttons/TROTTENET - Arrowbutton R.png" type="Texture" id=9]
[ext_resource path="res://Assets/Buttons/TROTTENET - Arrowbutton LPr.png" type="Texture" id=10]
[ext_resource path="res://Assets/Buttons/TROTTENET - Optionsbutton Pr.png" type="Texture" id=11]
[ext_resource path="res://Assets/Buttons/TROTTENET - Optionsbutton.png" type="Texture" id=12]
[ext_resource path="res://Assets/Buttons/TROTTENET - Arrowbutton L.png" type="Texture" id=13]
[ext_resource path="res://Scenes/SelectionMenu.gd" type="Script" id=14]

[node name="SelectionMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 160, 90 )
texture = ExtResource( 1 )

[node name="Levels" type="Sprite" parent="."]
position = Vector2( 160, 104 )
texture = ExtResource( 2 )
hframes = 2

[node name="Characters" type="Sprite" parent="."]
position = Vector2( 154, 38 )
texture = ExtResource( 3 )
hframes = 2

[node name="Options" type="TextureButton" parent="."]
margin_left = 283.0
margin_top = 1.0
margin_right = 301.0
margin_bottom = 19.0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Highscores" type="TextureButton" parent="."]
margin_left = 304.0
margin_top = 1.0
margin_right = 318.0
margin_bottom = 19.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="TextureButton" parent="."]
margin_left = 139.274
margin_top = 146.535
margin_right = 180.274
margin_bottom = 164.535
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Character R" type="TextureButton" parent="."]
margin_left = 232.281
margin_top = 33.2129
margin_right = 246.281
margin_bottom = 45.2129
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Character L" type="TextureButton" parent="."]
margin_left = 74.0757
margin_top = 32.5247
margin_right = 88.0757
margin_bottom = 44.5247
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level R" type="TextureButton" parent="."]
margin_left = 231.803
margin_top = 99.3425
margin_right = 245.803
margin_bottom = 111.342
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level L" type="TextureButton" parent="."]
margin_left = 74.0757
margin_top = 98.5247
margin_right = 88.0757
margin_bottom = 110.525
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Character R" to="." method="_on_Character_R_pressed"]
[connection signal="pressed" from="Character L" to="." method="_on_Character_L_pressed"]
[connection signal="pressed" from="Level R" to="." method="_on_Level_R_pressed"]
[connection signal="pressed" from="Level L" to="." method="_on_Level_L_pressed"]
